--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intelogis test task",
+  "name": "intelogis-test-task",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,14 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "leaflet": "1.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "4.0.1",
     "react-router-dom": "6.3.0"
   },
   "devDependencies": {
+    "@types/leaflet": "1.7.11",
     "@types/node": "16.11.43",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
