--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "dependencies": {
     "leaflet": "1.8.0",
+    "leaflet-contextmenu": "1.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-leaflet": "4.0.1",
-    "react-router-dom": "6.3.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/leaflet": "1.7.11",
