--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "leaflet": "1.8.0",
     "leaflet-contextmenu": "1.4.0",
+    "leaflet-routing-machine": "3.2.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/leaflet": "1.7.11",
+    "@types/leaflet-routing-machine": "3.2.4",
     "@types/node": "16.11.43",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
