--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet": "1.8.0",
     "leaflet-contextmenu": "1.4.0",
     "leaflet-routing-machine": "3.2.12",
+    "lrm-graphhopper": "1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
