--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "leaflet-routing-machine": "3.2.12",
     "lrm-graphhopper": "1.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-split": "2.0.14"
   },
   "devDependencies": {
     "@types/leaflet": "1.7.11",
