--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "ant-design/icons": "4.7.0",
+    "@ant-design/icons": "4.7.0",
     "antd": "4.21.6",
     "leaflet": "1.8.0",
     "leaflet-contextmenu": "1.4.0",
     "leaflet-routing-machine": "3.2.12",
     "lrm-graphhopper": "1.3.0",
+    "moment": "2.29.4",
     "react": "18.2.0",
+    "react-cool-dimensions": "2.0.7",
     "react-dom": "18.2.0",
     "react-split": "2.0.14"
   },
