--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.7.0",
+    "@reduxjs/toolkit": "1.8.3",
     "antd": "4.21.6",
     "leaflet": "1.8.0",
     "leaflet-contextmenu": "1.4.0",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-cool-dimensions": "2.0.7",
     "react-dom": "18.2.0",
+    "react-redux": "8.0.2",
     "react-split": "2.0.14"
   },
   "devDependencies": {
