--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@ant-design/icons": "4.7.0",
     "@reduxjs/toolkit": "1.8.3",
     "antd": "4.21.6",
     "leaflet": "1.8.0",
@@ -20,7 +19,8 @@
     "react-cool-dimensions": "2.0.7",
     "react-dom": "18.2.0",
     "react-redux": "8.0.2",
-    "react-split": "2.0.14"
+    "react-split": "2.0.14",
+    "redux-saga": "1.1.3"
   },
   "devDependencies": {
     "@types/leaflet": "1.7.11",
