--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "intelogis-test-task",
   "version": "0.1.0",
+  "homepage": "https://ultimabear.github.io/intelogis-test-task",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
@@ -28,6 +31,7 @@
     "@types/node": "16.11.43",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "gh-pages": "4.0.0",
     "react-scripts": "5.0.1",
     "sass": "1.53.0",
     "typescript": "4.7.4"
